# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  lint-tests-check.yml
gendiff/: __init__.py  constants.py  diff.py  file_handler.py  find_diff.py  parse_cli.py
gendiff/formatters/: plain.py  render.py  render_json.py  render_plain.py  render_stylish.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/yaml/: file2_nested.yml
